# raytracing

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  run.sh
docs/: NEXTWEEK.md  NEXT_WEEK.md  WEEKEND.md
src/: aabb.h  bvh.h  camera.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  perlin.h  quad.h  ray.h  sphere.h  texture.h
src/one/: camera.h  hittable.h  hittable_list.h  main.cpp  material.h  renderer.cpp  sphere.h
